--- a/src/css/spider.scss
+++ b/src/css/spider.scss
@@ -17,11 +17,12 @@
   scroll-snap-align: start !important;
 	flex: 1 0 100% !important;
   max-width: 100%;
+
+  > * {
+    flex: 1 1 auto;
+  }
 }
 
-.spider__slide > * {
-  flex: 1 1 auto;
-}
 
 .spider__figure {
   width: 100%;
@@ -43,36 +44,42 @@
   padding: 0;
   cursor: pointer;
   outline: none;
-}
-.spider__arrow:active {
-  filter: brightness(80%);
-}
-.spider__arrow::before {
-  position: absolute;
-  content: '';
-  display: block;
-  height: 10px;
-  width: 10px;
-}
-.spider__arrow[data-direction="prev"] {
-  left: 0;
-}
-.spider__arrow[data-direction="prev"]::before {
-  top: calc(50% - 5px);
-  left: calc(50% - 5px);
-  border-bottom: 1px solid #fff;
-  border-left: 1px solid #fff;
-  transform: rotate(45deg);
-}
-.spider__arrow[data-direction="next"] {
-  right: 0;
-}
-.spider__arrow[data-direction="next"]::before {
-  right: calc(50% - 5px);
-  bottom: calc(50% - 5px);
-  border-top: 1px solid #fff;
-  border-right: 1px solid #fff;
-  transform: rotate(45deg);
+
+  &::before {
+    position: absolute;
+    content: '';
+    display: block;
+    height: 10px;
+    width: 10px;
+  }
+
+  &:active {
+    filter: brightness(80%);
+  }
+
+  &[data-direction="prev"] {
+    left: 0;
+
+    &::before {
+      top: calc(50% - 5px);
+      left: calc(50% - 5px);
+      border-bottom: 1px solid #fff;
+      border-left: 1px solid #fff;
+      transform: rotate(45deg);
+    }
+  }
+
+  &[data-direction="next"] {
+    right: 0;
+
+    &::before {
+      right: calc(50% - 5px);
+      bottom: calc(50% - 5px);
+      border-top: 1px solid #fff;
+      border-right: 1px solid #fff;
+      transform: rotate(45deg);
+    }
+  }
 }
 
 .spider__dots {
