--- a/src/css/spider.scss
+++ b/src/css/spider.scss
@@ -4,7 +4,7 @@
 
 .spider__canvas {
   scroll-snap-type: x mandatory;
-  scroll-snap-stop: always;
+  overflow-scrolling: touch;
   overflow-x: scroll;
   display: flex;
 }
