--- a/src/css/spider.scss
+++ b/src/css/spider.scss
@@ -3,7 +3,7 @@
 }
 
 .spider__canvas {
-  scroll-snap-type: x mandatory;
+  //scroll-snap-type: x mandatory;
   overflow-scrolling: touch;
   overflow-x: scroll;
   display: flex;
