--- a/docs/src/css/general.scss
+++ b/docs/src/css/general.scss
@@ -17,7 +17,7 @@ pre {
 .container {
   max-width: 1024px;
   margin: 0 auto;
-  padding: 0 1em;
+  padding: 0 .88462rem;
 }
 
 .container > *:not(:first-child) {
