https://github.com/inc2734/snow-monkey-blocks/issues/473

--- a/src/css/spider.scss
+++ b/src/css/spider.scss
@@ -135,6 +135,7 @@
 [data-fade="true"] {
   .spider__canvas {
     position: relative !important;
+    overflow-x: hidden;
   }
 
   .spider__slide {
