--- a/src/css/spider.scss
+++ b/src/css/spider.scss
@@ -14,6 +14,12 @@
   &::-webkit-scrollbar {
     display: none;  // For Chrome and Safari
   }
+
+  &.is-dragging {
+    a {
+      pointer-events: none;
+    }
+  }
 }
 
 .spider__slide {
