inc2734/snow-monkey-blocks#728

--- a/src/css/spider.scss
+++ b/src/css/spider.scss
@@ -17,15 +17,19 @@
   box-sizing: border-box !important;
 }
 
-.spider__canvas {
-  --spider--canvas-width: var(--spider-canvas-width); // @deprecated
-  --spider--reference-width: var(--spider-reference-width); // @deprecated
+// @deprecated
+[style*="--spider-canvas-width\:"] .spider__canvas {
+  --spider--canvas-width: var(--spider-canvas-width);
+}
+[style*="--spider-reference-width\:"] .spider__canvas {
+  --spider--reference-width: var(--spider-reference-width);
+}
 
+.spider__canvas {
   overflow-scrolling: touch;
   overflow: scroll hidden;
   display: flex;
   box-sizing: content-box !important;
-  width: var(--spider--canvas-width);
 
   -ms-overflow-style: none;  // For IE and Edge
   scrollbar-width: none;  // For Firefox
