自動スライドボタンの色を文字色に変更

--- a/src/css/spider.scss
+++ b/src/css/spider.scss
@@ -149,6 +149,7 @@
   background-color: transparent;
   border: none;
   border-radius: 0;
+  color: inherit;
   font-family: Arial, sans-serif;
   line-height: 1;
   padding: 0;
